<resources>
    <string name="app_name">Contatos</string>
    <string name="celular">Celular</string>
    <string name="adicionar_celular">Adicionar celular</string>
    <string name="telefone">Telefone</string>
    <string name="e_mail">e-mail</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="site_pessoal">Site pessoal</string>

    <string-array name="tipo_telefone">
        <item>Telefone Residencial</item>
        <item>Telefone Comercial</item>
    </string-array>
</resources>