<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ContatoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10sp">

        <EditText
            android:id="@+id/nomeCompletoET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/nome_completo"
            android:inputType="textPersonName"
            android:padding="5dp" />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="5dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp">

        <Spinner
            android:id="@+id/tipoTelefoneSP"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/tipo_telefone" />

        <EditText
            android:id="@+id/telefoneET"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/telefone"
            android:inputType="phone" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp">

        <CheckBox
            android:id="@+id/celularCB"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:text="@string/adicionar_celular" />

        <EditText
            android:id="@+id/celularET"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/celular"
            android:inputType="phone"
            android:visibility="gone" />
    </LinearLayout>
    <EditText
        android:id="@+id/siteET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:hint="@string/site_pessoal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/salvarBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickButton"
            android:text="Salvar"
            app:backgroundTint="@color/orange"
            />
        <Button
            android:id="@+id/emailBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickButton"
            android:text="Enviar email"
            app:backgroundTint="@color/yellow"
             />
        <Button
            android:id="@+id/ligarBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickButton"
            android:text="Ligar"
            app:backgroundTint="@color/green"/>
        <Button
            android:id="@+id/siteBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickButton"
            android:text="Acessar site pessoal"
            app:backgroundTint="@color/blue" />
        <Button
            android:id="@+id/pdfBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickButton"
            android:text="Exportar para PDF"
            app:backgroundTint="@color/purple" />
    </LinearLayout>
    </LinearLayout>
</ScrollView>